got quote api to work on angular api

--- a/bookclub/src/app/app.component.html
+++ b/bookclub/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-nav></app-nav>
+<!-- <app-nav></app-nav> -->
+<app-quote></app-quote>
 <!-- <router-outlet></router-outlet> -->
 <!-- <h1 class="text-center">{{title}}</h1> -->
