--- a/bookclub/src/app/quote/quote.component.html
+++ b/bookclub/src/app/quote/quote.component.html
@@ -22,25 +22,65 @@
                 [(ngModel)] = "quotes.page" name = "page">
         </div>
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label> name </label>
             <input type="text" class ="form-control" id = "name"
                 [(ngModel)] = "quotes.name" name = "name">
-        </div>
+        </div> -->
 
     
-        <button class = "btn btn-success" type ="submit">Submit</button>
+        <button class = "btn" type ="submit">Submit</button>
     
     </form>
     </div> 
 
-<p>quote list</p>
-<ul *ngFor = "let q of quote">
+
+    <div class="container">
+
+        <div class="row g-20">
+            <div *ngFor = "let q of quote" class="col-12 col-md-6 col-lg-4">
+                <div class="card" >
+                    <p class="card-title"> {{q.name}}</p>
+                    <p class="card-text"> {{q.quote}}</p>
+
+                    <p class="card-text"> {{q.chapter}}</p>
+
+                    <div class="card-body">
+                        <a href="#" class="card-link">Edit</a>
+                        <a href="#" class="card-link">Delete</a>
+                        <a href="#" class="card-link">View</a>
+
+                      </div>
+                </div>
+            </div>
+
+         
+        </div>
+    </div>
+
+
+
+
+<!-- <ul *ngFor = "let q of quote"> -->
     
-    <li>{{q.chapter}}</li>
-    <li>{{q.name}}</li>
-    <li>{{q.quote}}</li>
-    <li>{{q.page}}</li>
-    <li>{{q.id}}</li>
-</ul>
+    <!-- <h3>Quotes</h3>
+
+    <div class="container" *ngFor="let q of quote">  
+        <div class="card-deck">
+          <div class="card bg-primary">
+            <div class="card-body text-center">
+              <p class="card-text">{{q.chapter}}</p>
+              <p class="card-text">{{q.quote}}</p>
+              <p class="card-text">{{q.page}}</p>
+            </div>
+        </div>
+    </div> -->
+
+<!-- </ul> -->
+    
+    <!-- <li>{{q.chapter}}</li> -->
+    <!-- <li>{{q.name}}</li> -->
+    <!-- <li>{{q.quote}}</li>
+    <li>{{q.page}}</li> -->
+    <!-- <li>{{q.id}}</li> -->
 
