--- a/bookclub/src/app/quote/quote.component.html
+++ b/bookclub/src/app/quote/quote.component.html
@@ -33,9 +33,24 @@
     
     </form>
     </div> 
+<div class="row">
+    <div *ngFor = "let q of quote" class="col-12 col-md-6 col-lg-4">
+    <div class="card">
+        <div class="card-header">
+          Quote
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>{{q.quote}}</p>
+            <footer class="blockquote-footer">chapter <cite title="Source Title">{{q.chapter}},</cite> page <cite title="Source Title">{{q.page}}</cite>
+            </footer>
+          </blockquote>
+        </div>
+      </div>
+      </div>
+    </div>
 
-
-    <div class="container">
+    <!-- <div class="container">
 
         <div class="row g-20">
             <div *ngFor = "let q of quote" class="col-12 col-md-6 col-lg-4">
@@ -56,7 +71,7 @@
 
          
         </div>
-    </div>
+    </div> -->
 
 
 
