--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -1,1 +1,24 @@
-<!-- <p>nav works!</p> -->
+<header class="header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="../../assets/images/logo/BookClub-logos (2)/BookClub-logos_black.png" alt="" height="100" width="100"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink = "/post/">Post</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/qoutes/">Quote</a>
+          </li>
+        </ul>
+       
+      </div>
+    </div>
+  </nav>
+</header>
