--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../../assets/images/logo/BookClub-logos (2)/BookClub-logos_black.png" alt="" height="100" width="100"></a>
+    <div class="container-fluid mb-50">
+      <a class="navbar-brand" href="#"><img src="../../assets/images/logo/BookClub-logos (2)/BookClub-logos_black.png" alt="book club logo" height="100" width="100"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
