--- a/bookclub/src/app/quote/quote.component.html
+++ b/bookclub/src/app/quote/quote.component.html
@@ -33,14 +33,14 @@
     
     </form>
     </div> 
-<div class="row g-4">
+<div class="row">
     <div *ngFor = "let q of quote" class="col-12 col-md-6 col-lg-4">
-    <div class="card">
+    <div class="card card-div">
         <div class="card-header">
           Quote
         </div>
-        <div class="card-body text-white bg-dark" >
-          <blockquote class="blockquote mb-0">
+        <div class="card-body text-white bg-dark mb-50" >
+          <blockquote class="blockquote">
             <p>{{q.quote}}</p>
             <footer class="blockquote-footer">chapter <cite title="Source Title">{{q.chapter}},</cite> page <cite title="Source Title">{{q.page}}</cite>
             </footer>
