update component funcionality working know, had trouble rendering on the site

--- a/bookclub/src/app/quote/quote.component.html
+++ b/bookclub/src/app/quote/quote.component.html
@@ -47,9 +47,10 @@
             </footer>
           </blockquote>
           <div class="card-body">
-            <a href="#" class="card-link">Edit</a>
-            <a href="#" class="card-link">Delete</a>
-            <a href="#" class="card-link">View</a>
+              <button (click)="updateQuote(q.id)" class ="btn btn-info">Edit</button>
+            <!-- <a routerLink="update-quote" class="card-link">Edit</a> -->
+            <!-- <a href="#" class="card-link">Delete</a>
+            <a href="#" class="card-link">View</a> -->
 
           </div>
         </div>
