--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid bg-white">
       <a class="navbar-brand" href="#"><img src="../../assets/images/logo/BookClub-logos (1)/BookClub-logos_black.png" alt="book club logo" height="100" width="100"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,7 +14,7 @@
             <a class="nav-link" routerLink = "/post/">Post</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/qoutes/">Quote</a>
+            <a class="nav-link" href="/quotes/">Quote</a>
           </li>
         </ul>
        
