changed to delete instead of edit

--- a/bookclub/src/app/quote/quote.component.html
+++ b/bookclub/src/app/quote/quote.component.html
@@ -48,6 +48,8 @@
           </blockquote>
           <div class="card-body">
               <button (click)="updateQuote(q.id)" class ="btn btn-info">Edit</button>
+              <button (click)="deleteQuote(q.id)" class ="btn btn-info">Delete</button>
+
             <!-- <a routerLink="update-quote" class="card-link">Edit</a> -->
             <!-- <a href="#" class="card-link">Delete</a>
             <a href="#" class="card-link">View</a> -->
