reverse the quotes in order from newest to oldest

--- a/bookclub/src/app/quote/quote.component.css
+++ b/bookclub/src/app/quote/quote.component.css
@@ -9,3 +9,12 @@
 .btn{
     margin-bottom: 50px;
 }
+
+.btn-css{
+    margin-left: 20px;
+    margin-bottom: 0px;
+
+}
+/* .bot{
+    padding-bottom: 10px;
+} */
