--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -2,10 +2,10 @@
     <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid bg-white">
       <a class="navbar-brand" href="#"><img src="../../assets/images/logo/BookClub-logos (1)/BookClub-logos_black.png" alt="book club logo" height="100" width="100"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+      </button> -->
+      <!-- <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent"> -->
         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -19,6 +19,6 @@
         </ul>
        
       </div>
-    </div>
+    <!-- </div> -->
   </nav>
 </header>
