--- a/bookclub/src/app/post/post.component.html
+++ b/bookclub/src/app/post/post.component.html
@@ -1,10 +1,77 @@
-<div class="card">
-    <div class="card-header">
-      Featured
+<div class="col-md-6 offset-md-3">
+  <h3>Post</h3>
+  <form (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label> Title</label>
+      <input
+        type="text"
+        class="form-control"
+        id="title"
+        [(ngModel)]="posts.title"
+        name="title"
+        placeholder="Title"
+      />
     </div>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+
+    <div class="form-group">
+      <label> Body </label>
+      <input
+        type="text"
+        class="form-control"
+        id="body"
+        [(ngModel)]="posts.body"
+        name="body"
+      />
+    </div>
+
+    <div class="form-group">
+      <label> page </label>
+      <input
+        type="text"
+        class="form-control"
+        id="page"
+        [(ngModel)]="posts.page"
+        name="page"
+        placeholder="Page"
+      />
+    </div>
+    <!-- <div class="form-group">
+      <label> date </label>
+      <input
+        type="text"
+        class="form-control"
+        id="date"
+        [(ngModel)]="posts.date"
+        name="date"
+      />
+    </div> -->
+
+    <button class="btn btn-default" type="submit">Submit</button>
+  </form>
+</div>
+
+<div class="row">
+  <div *ngFor="let p of post" class="col-12 col-md-6 col-lg-4">
+    <div class="card">
+      <div class="card-header">Featured</div>
+      <div class="card-body">
+        <h5 class="card-title">{{ p.body }}</h5>
+        <p class="card-text">
+          With supporting text below as a natural lead-in to additional content.
+        </p>
+        <div class="card-body">
+          <button (click)="updatePost(p.id)" class="btn btn-info btn-css">
+            Edit
+          </button>
+          <button (click)="deletePost(p.id)" class="btn btn-info btn-css">
+            Delete
+          </button>
+          </div>
+          <!-- <a href="#" class="btn btn-primary">edit</a>
+        <a routerLink=""></a> -->
+        </div>
+      </div>
     </div>
   </div>
+
+ 
