--- a/bookclub/src/app/landing/landing.component.html
+++ b/bookclub/src/app/landing/landing.component.html
@@ -1,5 +1,64 @@
-<p>landing works!</p>
+<div class="col-md-6 offset-md-3">
+    <h3>Book</h3>
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label> Title</label>
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          [(ngModel)]="book.title"
+          name="title"
+          placeholder="Title"
+        />
+      </div>
+  
+      <div class="form-group">
+        <label> Summary </label>
+        <input
+          type="text"
+          class="form-control"
+          id="summary"
+          [(ngModel)]="book.summary"
+          name="summary"
+        />
+      </div>
+  
+      <div class="form-group">
+        <label> page </label>
+        <input
+          type="text"
+          class="form-control"
+          id="pages"
+          [(ngModel)]="book.pages"
+          name="pages"
+          placeholder="Pages"
+        />
+      </div>
+      <button class="btn btn-default" type="submit">Submit</button>
+  </form>
+</div>
+
+      <!-- id: number=0;
+      title: string='';
+      author: string = '';
+      img: string = '';
+      summary: string='';
+      link: string = '';
+      pages: string = '';
+      genre: string = '';
+      other: string = ''; -->
 
 <div>
-    <img src="" alt="">
+    <p>
+        {{book.title}}
+    </p>
+    <div>
+        <!-- <img src="{{}}" alt=""> -->
+    </div>
+    <div>
+        
+    </div>
+
 </div>
+
