--- a/bookclub/src/app/landing/landing.component.html
+++ b/bookclub/src/app/landing/landing.component.html
@@ -1,24 +1,57 @@
-<div>
+<!-- <div>
     <p>
         {{book.title}}
     </p>
     <div>
-        <!-- <img src="{{}}" alt=""> -->
+        <img src="{{}}" alt="">
     </div>
     <div>
         
     </div>
 
-</div>
+</div> -->
 
 <!-- https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimg1.imagesbn.com%2Fp%2F9781429992800_p0_v4_s260x420.JPG&f=1&nofb=1 -->
+
+<!-- HERE THE BOOK OF THE MONTH GOES AND THEN THE CARDS IN THE BOTTOM -->
+<div style="height: 100px; width: 100px; background-color: black;">
+
+
+
+
+</div>
+
+<div
+*ngFor="let b of books.slice().reverse()"
+class="col-12 col-md-6 col-lg-4"
+>
+    
+<div class="card" style="width: 18rem;">
+    <img src="{{b.img}}" class="card-img-top" alt="image of the book {{b.title}}">
+    <div class="card-body">
+      <h5 class="card-title">{{b.title}}</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. {{b.summary}}</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Author: {{b.author}}</li>
+      <li class="list-group-item">Genres: {{b.genre}}</li>
+      <li class="list-group-item">Length: {{b.pages}} pg</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Delete</a>
+      <a href="#" class="card-link">Edit</a>
+    </div>
+  </div>
+</div>
+
+
 
 
 <div class="col-md-6 offset-md-3">
     <h3>Book</h3>
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
-        <label> Title</label>
+        <!-- <label> Title</label> -->
         <input
           type="text"
           class="form-control"
@@ -28,20 +61,45 @@
           placeholder="Title"
         />
       </div>
+
+      <div class="form-group">
+        <!-- <label> Author </label> -->
+        <input
+          type="text"
+          class="form-control"
+          id="author"
+          [(ngModel)]="book.author"
+          name="author"
+          placeholder="Author"
+        />
+      </div>
   
       <div class="form-group">
-        <label> Summary </label>
+        <!-- <label> Summary </label> -->
         <input
           type="text"
           class="form-control"
           id="summary"
           [(ngModel)]="book.summary"
           name="summary"
+          placeholder="Summary"
+        />
+      </div>
+
+      <div class="form-group">
+        <!-- <label> genre </label> -->
+        <input
+          type="text"
+          class="form-control"
+          id="genre"
+          [(ngModel)]="book.genre"
+          name="genre"
+          placeholder="Genre"
         />
       </div>
   
       <div class="form-group">
-        <label> page </label>
+        <!-- <label> pages </label> -->
         <input
           type="text"
           class="form-control"
@@ -51,6 +109,19 @@
           placeholder="Pages"
         />
       </div>
+
+      <div class="form-group">
+        <!-- <label> image </label> -->
+        <input
+          type="text"
+          class="form-control"
+          id="img"
+          [(ngModel)]="book.img"
+          name="img"
+          placeholder="Image Link"
+        />
+      </div>
+
       <button class="btn btn-default" type="submit">Submit</button>
   </form>
 </div>
