--- a/bookclub/src/app/edit-post/edit-post.component.html
+++ b/bookclub/src/app/edit-post/edit-post.component.html
@@ -1,1 +1,39 @@
-<p>edit-post works!</p>
+<div class="col-md-6 offset-md-3">
+    <h3>Post</h3>
+    <form (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label> Title</label>
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          [(ngModel)]="post.title"
+          name="title"
+        />
+      </div>
+  
+      <div class="form-group">
+        <label> Post </label>
+        <input
+          type="text"
+          class="form-control"
+          id="body"
+          [(ngModel)]="post.body"
+          name="body"
+        />
+      </div>
+  
+      <div class="form-group">
+        <label> Page </label>
+        <input
+          type="text"
+          class="form-control"
+          id="page"
+          [(ngModel)]="post.page"
+          name="page"
+        />
+      </div>
+
+      <button class="btn btn-default" type="submit">Submit</button>
+    </form>
+  </div>
