--- a/bookclub/src/app/post/post.component.html
+++ b/bookclub/src/app/post/post.component.html
@@ -2,7 +2,7 @@
   <h3>Post</h3>
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label> Title</label>
+      <!-- <label> Title</label> -->
       <input
         type="text"
         class="form-control"
@@ -14,18 +14,19 @@
     </div>
 
     <div class="form-group">
-      <label> Body </label>
+      <!-- <label> Body </label> -->
       <input
         type="text"
         class="form-control"
         id="body"
         [(ngModel)]="posts.body"
         name="body"
+        placeholder="Post"
       />
     </div>
 
     <div class="form-group">
-      <label> page </label>
+      <!-- <label> page </label> -->
       <input
         type="text"
         class="form-control"
