--- a/bookclub/src/app/edit-book-details/edit-book-details.component.html
+++ b/bookclub/src/app/edit-book-details/edit-book-details.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-md-6 offset-md-3">
     <h3>Edit Book Details</h3>
     <form (ngSubmit)="onSubmit()">
@@ -69,4 +70,5 @@
 
       <button class="btn btn-default" type="submit">Submit</button>
   </form>
+</div>
 </div>
