--- a/bookclub/src/app/edit-post/edit-post.component.html
+++ b/bookclub/src/app/edit-post/edit-post.component.html
@@ -1,5 +1,6 @@
+<div class="container">
 <div class="col-md-6 offset-md-3">
-    <h3>Post</h3>
+    <h3>Edit Post</h3>
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label> Title</label>
@@ -37,3 +38,4 @@
       <button class="btn btn-default" type="submit">Submit</button>
     </form>
   </div>
+</div>
