--- a/bookclub/src/app/post/post.component.html
+++ b/bookclub/src/app/post/post.component.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="row">
-  <div *ngFor="let p of post" class="col-12 col-md-6 col-lg-4">
+  <div *ngFor="let p of post.slice().reverse()" class="col-12 col-md-6 col-lg-4">
     <div class="card">
       <div class="card-header">Featured</div>
       <div class="card-body">
