--- a/bookclub/src/app/landing/landing.component.css
+++ b/bookclub/src/app/landing/landing.component.css
@@ -9,3 +9,13 @@
 .btn{
     margin-bottom: 50px;
 }
+
+.btn-css{
+    margin-left: 20px;
+    margin-bottom: 0px;
+
+}
+
+.container{
+    background-color: #694F5D;
+}
