--- a/bookclub/src/app/landing/landing.component.html
+++ b/bookclub/src/app/landing/landing.component.html
@@ -42,10 +42,10 @@ class="col-12 col-md-6 col-lg-4"
     <div class="card-body">
       <!-- <a href="#" class="card-link">Delete</a>
       <a href="#" class="card-link">Edit</a> -->
-        <button (click)="updateBook(b.id)" class="btn btn-info btn-css">
+        <button (click)="updateBook(b.id)" class="btn btn-light btn-css">
           Edit
         </button>
-        <button (click)="deleteBook(b.id)" class="btn btn-info btn-css">
+        <button (click)="deleteBook(b.id)" class="btn btn-warning btn-css">
           Delete
         </button>
 
@@ -56,6 +56,7 @@ class="col-12 col-md-6 col-lg-4"
 
 
 
+<div class="container">
 
 <div class="col-md-6 offset-md-3">
     <h3>Book</h3>
@@ -132,8 +133,10 @@ class="col-12 col-md-6 col-lg-4"
         />
       </div>
 
-      <button class="btn btn-default" type="submit">Submit</button>
+      <button class="btn btn-dark" type="submit">Submit</button>
   </form>
+</div>
+
 </div>
 
       <!-- id: number=0;
