--- a/bookclub/src/app/quote/quote.component.html
+++ b/bookclub/src/app/quote/quote.component.html
@@ -38,17 +38,13 @@
         placeholder="Page"
       />
     </div>
-
-   
-    <!-- <div class="form-group">
-            <label> name </label>
-            <input type="text" class ="form-control" id = "name"
-                [(ngModel)] = "quotes.name" name = "name">
-        </div> -->
-
-    <button class="btn btn-default" type="submit">Submit</button>
+    <button class="btn btn-dark" type="submit">Submit</button>
   </form>
 </div>
+
+
+
+
 <div class="row">
   <div
     *ngFor="let q of quote.slice().reverse()"
@@ -68,64 +64,15 @@
           </footer>
         </blockquote>
         <div class="card-body">
-          <button (click)="updateQuote(q.id)" class="btn btn-info btn-css">
+          <button (click)="updateQuote(q.id)" class="btn btn-light btn-css">
             Edit
           </button>
-          <button (click)="deleteQuote(q.id)" class="btn btn-info btn-css">
+          <button (click)="deleteQuote(q.id)" class="btn btn-warning btn-css">
             Delete
           </button>
 
-          <!-- <a routerLink="update-quote" class="card-link">Edit</a> -->
-          <!-- <a href="#" class="card-link">Delete</a>
-            <a href="#" class="card-link">View</a> -->
         </div>
       </div>
     </div>
   </div>
 </div>
-
-<!-- <div class="container">
-
-        <div class="row g-20">
-            <div *ngFor = "let q of quote" class="col-12 col-md-6 col-lg-4">
-                <div class="card" >
-                    <p class="card-title"> {{q.name}}</p>
-                    <p class="card-text"> {{q.quote}}</p>
-
-                    <p class="card-text"> {{q.chapter}}</p>
-
-                    <div class="card-body">
-                        <a href="#" class="card-link">Edit</a>
-                        <a href="#" class="card-link">Delete</a>
-                        <a href="#" class="card-link">View</a>
-
-                      </div>
-                </div>
-            </div>
-
-         
-        </div>
-    </div> -->
-
-<!-- <ul *ngFor = "let q of quote"> -->
-
-<!-- <h3>Quotes</h3>
-
-    <div class="container" *ngFor="let q of quote">  
-        <div class="card-deck">
-          <div class="card bg-primary">
-            <div class="card-body text-center">
-              <p class="card-text">{{q.chapter}}</p>
-              <p class="card-text">{{q.quote}}</p>
-              <p class="card-text">{{q.page}}</p>
-            </div>
-        </div>
-    </div> -->
-
-<!-- </ul> -->
-
-<!-- <li>{{q.chapter}}</li> -->
-<!-- <li>{{q.name}}</li> -->
-<!-- <li>{{q.quote}}</li>
-    <li>{{q.page}}</li> -->
-<!-- <li>{{q.id}}</li> -->
