changed the card bg color and the text to white

--- a/bookclub/src/app/landing/landing.component.html
+++ b/bookclub/src/app/landing/landing.component.html
@@ -27,7 +27,7 @@
 class="col-12 col-md-6 col-lg-4"
 >
     
-<div class="card" style="width: 18rem;">
+<div class="card text-white bg-dark mb-3" style="width: 18rem;">
     <img src="{{b.img}}" class="card-img-top" alt="image of the book {{b.title}}">
     <div class="card-body">
       <h5 class="card-title">{{b.title}}</h5>
@@ -35,9 +35,9 @@ class="col-12 col-md-6 col-lg-4"
       <!-- <p>{{b.id}}</p> -->
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">Author: {{b.author}}</li>
-      <li class="list-group-item">Genres: {{b.genre}}</li>
-      <li class="list-group-item">Length: {{b.pages}} pg</li>
+      <li class="list-group-item text-white bg-dark">Author: {{b.author}}</li>
+      <li class="list-group-item text-white bg-dark">Genres: {{b.genre}}</li>
+      <li class="list-group-item text-white bg-dark">Length: {{b.pages}} pg</li>
     </ul>
     <div class="card-body">
       <!-- <a href="#" class="card-link">Delete</a>
