--- a/bookclub/src/app/post/post.component.html
+++ b/bookclub/src/app/post/post.component.html
@@ -53,7 +53,7 @@
 
 <div class="row">
   <div *ngFor="let p of post.slice().reverse()" class="col-12 col-md-6 col-lg-4">
-    <div class="card">
+    <div class="card text-white bg-dark mb-3">
       <div class="card-header">Page: {{p.page}}</div>
       <div class="card-body">
         <h5 class="card-title">{{ p.title }}</h5>
