--- a/bookclub/src/app/landing/landing.component.html
+++ b/bookclub/src/app/landing/landing.component.html
@@ -14,6 +14,8 @@
 <!-- https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fimg1.imagesbn.com%2Fp%2F9781429992800_p0_v4_s260x420.JPG&f=1&nofb=1 -->
 
 <!-- HERE THE BOOK OF THE MONTH GOES AND THEN THE CARDS IN THE BOTTOM -->
+
+
 <div style="height: 100px; width: 100px; background-color: black;">
 
 <!-- <img src="{{b.img: b.title === the Way Of Kings}}" alt=""> -->
@@ -28,10 +30,10 @@ class="col-12 col-md-6 col-lg-4"
 >
     
 <div class="card text-white bg-dark mb-3" style="width: 18rem;">
-    <img src="{{b.img}}" class="card-img-top" alt="image of the book {{b.title}}">
+    <img src="{{b.img}}" class="card-img-top rounded mx-auto d-block" alt="image of the book {{b.title}}">
     <div class="card-body">
       <h5 class="card-title">{{b.title}}</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. {{b.summary}}</p>
+      <p class="card-text">{{b.summary}}</p>
       <!-- <p>{{b.id}}</p> -->
     </div>
     <ul class="list-group list-group-flush">
