--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -1,3 +1,4 @@
+<span id="site-title"><p>WELCOME TO <span class="the">THE</span> BOOKCLUB</p></span>
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-light ">
     <div class="container-fluid bg-white">
