--- a/bookclub/src/app/post/post.component.html
+++ b/bookclub/src/app/post/post.component.html
@@ -54,7 +54,7 @@
 <div class="row">
   <div *ngFor="let p of post.slice().reverse()" class="col-12 col-md-6 col-lg-4">
     <div class="card text-white bg-dark mb-3">
-      <div class="card-header">Page: {{p.page}}</div>
+      <div class="card-header bg-white text-dark">Page: {{p.page}}</div>
       <div class="card-body">
         <h5 class="card-title">{{ p.title }}</h5>
         <p class="card-text">
