--- a/bookclub/src/app/quote/quote.component.html
+++ b/bookclub/src/app/quote/quote.component.html
@@ -1,5 +1,6 @@
 <!-- <app-nav></app-nav> -->
 
+<div class="container">
 <div class="col-md-6 offset-md-3">
   <h3>Quote</h3>
   <!-- TO RESET FORM: https://www.youtube.com/watch?v=gfSwvsqUv84&ab_channel=kudvenkat -->
@@ -41,7 +42,7 @@
     <button class="btn btn-dark" type="submit">Submit</button>
   </form>
 </div>
-
+</div>
 
 
 
