--- a/bookclub/src/app/post/post.component.css
+++ b/bookclub/src/app/post/post.component.css
@@ -15,3 +15,13 @@
     margin-bottom: 0px;
 
 }
+
+.container{
+    background-color: whitesmoke;
+    padding: 0px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
