--- a/bookclub/src/app/post/post.component.html
+++ b/bookclub/src/app/post/post.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-md-6 offset-md-3">
   <h3>Post</h3>
   <form (ngSubmit)="onSubmit()">
@@ -49,6 +50,7 @@
 
     <button class="btn btn-dark" type="submit">Submit</button>
   </form>
+</div>
 </div>
 
 <div class="row">
