--- a/bookclub/src/app/quote/quote.component.css
+++ b/bookclub/src/app/quote/quote.component.css
@@ -20,4 +20,12 @@
 } */
 
 
-
+.container{
+    background-color: whitesmoke;
+    padding: 0px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
