--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -1,25 +1,17 @@
-<span id="site-title"><p>WELCOME TO <span class="the">THE</span> BOOKCLUB</p></span>
+<span id="site-title">
+  <p>WELCOME TO <span class="the">THE</span> BOOKCLUB</p>
+</span>
 <header class="header">
-    <nav class="navbar navbar-expand-lg navbar-light ">
-    <div class="container-fluid bg-white">
-      <a class="navbar-brand" routerLink=""><img src="../../assets/images/logo/BookClub-logos (1)/BookClub-logos_black.png" alt="book club logo" height="100" width="100"></a>
-      <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button> -->
-      <!-- <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent"> -->
-        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink = "/post/">Post</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/quotes">Quote</a>
-          </li>
-        </ul>
-       
-      </div>
-    <!-- </div> -->
-  </nav>
+  <div class="container-fluid bg-white">
+    <nav class="nav nav-pills flex-column flex-sm-row navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" routerLink=""><img
+          src="../../assets/images/logo/BookClub-logos (1)/BookClub-logos_black.png" alt="book club logo" height="100"
+          width="100" />
+      </a>
+
+      <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" routerLink="">Home</a>
+      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/post/">Post</a>
+      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/quotes">Quote</a>
+    </nav>
+  </div>
 </header>
