--- a/bookclub/src/styles.css
+++ b/bookclub/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background-color: #CFD2B2;
+    background-color: #071108;
+    /* #071108 */
+
+    /* #CFD2B2 */
     /* #CFD2B2 greenish stylish */
 }
