--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -1,8 +1,6 @@
-<span id="site-title">
-  <p>WELCOME TO <span class="the">THE</span> BOOKCLUB</p>
-</span>
+
 <header class="header">
-  <div class="container-fluid bg-white">
+  <div class="container-fluid">
     <nav class="nav nav-pills flex-column flex-sm-row navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" routerLink=""><img
           src="../../assets/images/logo/BookClub-logos (1)/BookClub-logos_black.png" alt="book club logo" height="100"
@@ -15,3 +13,7 @@
     </nav>
   </div>
 </header>
+
+<span id="site-title">
+  <p>WELCOME TO <span class="the">THE</span> BOOKCLUB</p>
+</span>
