--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -8,8 +8,8 @@
       </a>
 
       <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" routerLink="">Home</a>
-      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/post/">Post</a>
-      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/quotes">Quote</a>
+      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/post/">Posts</a>
+      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/quotes">Quotes</a>
     </nav>
   </div>
 </header>
