--- a/bookclub/src/app/nav/nav.component.html
+++ b/bookclub/src/app/nav/nav.component.html
@@ -8,7 +8,7 @@
       </a>
 
       <a class="flex-sm-fill text-sm-center nav-link" aria-current="page" routerLink="">Home</a>
-      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/post/">Posts</a>
+      <a class="flex-sm-fill text-sm-center nav-link" routerLink="/posts/">Posts</a>
       <a class="flex-sm-fill text-sm-center nav-link" routerLink="/quotes">Quotes</a>
     </nav>
   </div>
