modified frontend code so that quotes is connected to a book so books now have a list of quotes and can create, delete

--- a/bookclub/src/app/landing/landing.component.html
+++ b/bookclub/src/app/landing/landing.component.html
@@ -31,6 +31,9 @@
                 <button (click)="postList(b.id)" class="btn btn-light btn-css">
                     Posts
                 </button>
+                <button (click)="quoteList(b.id)" class="btn btn-light btn-css">
+                    Quotes
+                </button>
                 <button (click)="updateBook(b.id)" class="btn btn-light btn-css">
                     Edit
                 </button>
