--- a/bookclub/src/app/edit-post/edit-post.component.html
+++ b/bookclub/src/app/edit-post/edit-post.component.html
@@ -1,39 +1,23 @@
 <div class="container">
-<div class="col-md-6 offset-md-3">
+  <div class="col-md-6 offset-md-3">
     <h3>Edit Post</h3>
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label> Title</label>
-        <input
-          type="text"
-          class="form-control"
-          id="title"
-          [(ngModel)]="post.title"
-          name="title"
-        />
+        <input type="text" class="form-control" id="title" [(ngModel)]="post.title" name="title" />
       </div>
-  
+
+      <div class="form-group">
+          <label> Page </label>
+          <input type="text" class="form-control" id="page" [(ngModel)]="post.page" name="page" />
+      </div>
+
       <div class="form-group">
         <label> Post </label>
-        <input
-          type="text"
-          class="form-control"
-          id="body"
-          [(ngModel)]="post.body"
-          name="body"
-        />
+        <textarea type="text" class="form-control" id="body" [(ngModel)]="post.body" name="body" ></textarea>
       </div>
-  
-      <div class="form-group">
-        <label> Page </label>
-        <input
-          type="text"
-          class="form-control"
-          id="page"
-          [(ngModel)]="post.page"
-          name="page"
-        />
-      </div>
+
+      
 
       <button class="btn btn-default" type="submit">Submit</button>
     </form>
