--- a/bookclub/src/app/post/post.component.html
+++ b/bookclub/src/app/post/post.component.html
@@ -8,14 +8,16 @@
       </div>
 
       <div class="form-group">
-        <!-- <label> Body </label> -->
-        <input type="text" class="form-control" id="body" [(ngModel)]="posts.body" name="body" placeholder="Post" />
-      </div>
-
-      <div class="form-group">
         <!-- <label> page </label> -->
         <input type="text" class="form-control" id="page" [(ngModel)]="posts.page" name="page" placeholder="Page" />
       </div>
+
+      <div class="form-group">
+        <!-- <label> Body </label> -->
+        <textarea type="text" class="form-control" id="body" [(ngModel)]="posts.body" name="body" placeholder="Post" ></textarea>
+      </div>
+
+      
       <!-- <div class="form-group">
       <label> date </label>
       <input
